IE mostly fixed, might be issues on extreme zoom

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body data-offset="50" data-spy="scroll" data-target="#navbar">
-		 <div class="col">
+		 <div class="col-12">
     <nav class="navbar fixed-top navbar-inverse" data-spy="affix" id="navbar">
         <div class="container-fluid text" id="navbar-container">
-<div class="col section-col text-center" id="nav-col">
-		 <div class="col text-left">
+<div class="col-12 section-col text-center" id="nav-col">
+		 <div class="col-6 text-left">
             <ul class="nav nav-pills">
                 <li class="nav-item">
                     <a class="nav-link" href="#about">About</a>
@@ -34,7 +34,7 @@
                 </li>
             </ul>
         </div> 
-				<div class="col text-right">
+				<div class="col-6 text-right">
 				<h2 id="navbar-name">Justin Buttrey || Software Developer</h2>
 		 </div>
 		</div>
@@ -45,17 +45,17 @@
         <!-- About Section -->
         <div class="row text-center section-title" id="about">
             <hr class="section-title-hr">
-            <div class="col">
+            <div class="col-12">
                 <h1 class="section-title-text">About</h1>
             </div>
         </div>
         <div class="section" id="about-content">
-            <div class="col section-col text-center">
-                <div class="col text-center profile-picture-col"><img alt="picture of me" id="profile-picture" src="images/profile_pic.jpg"></div>
+            <div class="col-12 section-col text-center">
+                <div class="col-12 text-center profile-picture-col"><img alt="picture of me" id="profile-picture" src="images/profile_pic.jpg"></div>
                 <div class="row">
                     <div class="about-text">
                         <div class="row">
-                            <div class="col text-left">
+                            <div class="col-12 text-left">
                                 <h1 class="text-center" id="about-h1">Justin Buttrey</h1>
 								<hr class="about-hr">
                                 <p>Front end developer, part-time student and hobby game designer. I'm currently working through the FreeCodeCamp courses and I have experience with C#, Javascript, SQL, HTML and CSS.</p>
@@ -76,12 +76,12 @@
         <!-- Skills Section -->
         <div class="row text-center section-title" id="skills">
             <hr class="section-title-hr">
-            <div class="col">
+            <div class="col-12">
                 <h1 class="section-title-text">Technical Skills</h1>
             </div>
         </div>
         <div class="section" id="skills-content">
-		<div class="col section-col text-center">
+		<div class="col-12 section-col text-center">
            <hr class="skills-hr">
             <h1>Languages</h1>
             <hr class="skills-hr">
@@ -167,12 +167,12 @@
         <!-- Projects Section -->
         <div class="row text-center section-title" id="projects">
             <hr class="section-title-hr">
-            <div class="col">
+            <div class="col-12">
                 <h1 class="section-title-text">Projects</h1>
             </div>
         </div>
         <div class="section" id="projects-content">
-		<div class="col section-col text-center">
+		<div class="col-12 section-col text-center">
                 <div class="thumbnail">
                     <div class="portfolio-img-bg">
                         <a href="https://github.com/Krashner/Projects" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-gh.jpg"></a>
@@ -226,13 +226,13 @@
         <!-- Contact Section -->
         <div class="row text-center section-title" id="contact">
             <hr class="section-title-hr">
-            <div class="col">
+            <div class="col-12">
                 <h1 class="section-title-text">Contact</h1>
             </div>
         </div>
         <div class="section" id="contact-content">
             <div class="row" id="contact-content-row">
-                <div class="col section-col text-center" id="form-container">
+                <div class="col-12 section-col text-center" id="form-container">
                     <p>If you like my work, or would just like to say hello, please feel free to email me with the form below.</p>
                     <hr>
                     <form action="https://formspree.io/jbuttrey@oddrealms.com" class="form" id="form" method="post" name="form">
@@ -252,7 +252,7 @@
             </div>
         </div>
         <div class="sections-dummy" id="dummy-bottom">
-            <div class="col text-center">
+            <div class="col-12 text-center">
                 <a class="web-links" href="https://github.com/krashner" target="_blank"><i aria-hidden="true" class="fab fa-github"></i></a> <a class="web-links" href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><i aria-hidden="true" class="fab fa-linkedin"></i></a> <a class="web-links" href="https://www.freecodecamp.com/krashner" target="_blank"><i aria-hidden="true" class="fab fa-free-code-camp"></i></a>
             </div>
         </div>
