--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <div class="col-12 text-left">
                                 <h1 class="text-center" id="about-h1">Justin Buttrey</h1>
 								<hr class="about-hr">
-                                <p>Front end developer, part-time student and hobby game designer. I'm currently working through the FreeCodeCamp courses and I have experience with C#, Javascript, SQL, HTML and CSS.</p>
+                                <p>Front-end web developer, electronics technician and full-time student. I have experience with C#, Javascript, SQL, HTML and CSS.</p>
                             </div>
                         </div>
                     </div>
