--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <div class="col-12 section-col text-center">
                     <div class="thumbnail shadow">
                         <div class="portfolio-img-bg">
-                            <a href="https://raw.githubusercontent.com/Krashner/krashner.github.io/master/images/fCCResponsiveWebDesignCert.png" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-fcc.png"></a>
+                            <a href="images/fCCResponsiveWebDesignCert.png" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-fcc.png"></a>
                         </div>
                         <p class="figure-caption">freeCodeCamp Responsive Web Design</p>
                     </div>
