--- a/index.html
+++ b/index.html
@@ -267,13 +267,18 @@
             </div>
             <div class="section" id="certifications-content">
                 <div class="col-12 section-col text-center">
-                    <h1 class="skills-group">Other</h1>
+                    <div class="row text-center">
+                        <div class="col">
+                    
+                    <h1 class="skills-group">Web Design</h1>
                     <div class="thumbnail shadow">
                         <div class="portfolio-img-bg">
                             <a href="images/fCCResponsiveWebDesignCert.png" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-fcc.png"></a>
                         </div>
                         <p class="figure-caption">freeCodeCamp Responsive Web Design</p>
                     </div>
+                            </div>
+                        </div>
                 </div>
             </div>
             <!-- Contact Section -->
