--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     </div>
                     <div class="thumbnail shadow">
                         <div class="portfolio-img-bg">
-                            <a href="http://www.oddrealms.com/" target="_blank"><img alt="OddRealms link" class="portfolio-img" src="images/thumbnail-or.jpg"></a>
+                            <a href="https://www.oddrealms.com/" target="_blank"><img alt="OddRealms link" class="portfolio-img" src="images/thumbnail-or.jpg"></a>
                         </div>
                         <p class="figure-caption">Open world game project</p>
                     </div>
@@ -264,7 +264,7 @@
 
                     <div class="thumbnail shadow">
                         <div class="portfolio-img-bg">
-                            <a href="http://jimbuttreyperformance.com/" target="_blank"><img alt="Jim Buttrey Performace link" class="portfolio-img" src="images/thumbnail-jb.jpg"></a>
+                            <a href="https://jimbuttreyperformance.com/" target="_blank"><img alt="Jim Buttrey Performace link" class="portfolio-img" src="images/thumbnail-jb.jpg"></a>
                         </div>
                         <p class="figure-caption">Performace Engines Business Site</p>
                     </div>
