--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfolio">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,Web Developer,Programmer,Software Developer,C#">
     <meta name="author" content="Justin Buttrey">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
     <link href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
     <nav class="navbar fixed-top navbar-inverse" data-spy="affix" id="navbar">
         <div class="container-fluid text" id="navbar-container">
             <div class="row section-col text-center" id="nav-col">
-				
+
                 <div class="pos-f-t w-100" id="collapse-menu">
                     <div class="collapse" id="navbarToggleExternalContent">
                         <div class="bg-dark p-2">
@@ -122,73 +122,73 @@
             <div class="col-12 section-col text-center">
                 <h1 class="skills-group">Languages</h1>
                 <div class="row">
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-csharp-plain colored"></i>
                         <p>C#: Proficient</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-html5-plain colored"></i>
                         <p>HTML5: Proficient</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-css3-plain colored"></i>
                         <p>CSS3: Proficient</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-javascript-plain colored"></i>
                         <p>JavaScript: Proficient</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-java-plain colored"></i>
                         <p>Java: Some Experience</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-cplusplus-plain colored"></i>
                         <p>C++: Some Experience</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-python-plain colored"></i>
                         <p>Python: Some Experience</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-php-plain colored"></i>
                         <p>PHP: Some Experience</p>
                     </div>
                 </div>
                 <h1 class="skills-group">Libraries and Frameworks</h1>
                 <div class="row">
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-dot-net-plain colored"></i>
                         <p>.Net: Proficient</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-bootstrap-plain colored"></i>
                         <p>Bootstrap: Some Experience</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-jquery-plain-wordmark colored"></i>
                         <p>jQuery: Some Experience</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-react-plain colored"></i>
                         <p>React: Some Experience</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-angularjs-plain colored"></i>
                         <p>AngularJS: Some Experience</p>
                     </div>
                 </div>
                 <h1 class="skills-group">Toolsets</h1>
                 <div class="row">
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-visualstudio-plain colored"></i>
                         <p>Visual Studio: Proficient</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-git-plain colored"></i>
                         <p>Git: Proficient</p>
                     </div>
-                    <div class="icon text-center">
+                    <div class="col icon text-center">
                         <i class="devicon-github-plain colored"></i>
                         <p>GitHub: Proficient</p>
                     </div>
@@ -209,25 +209,25 @@
                 <h1 class="projects-group">Web Apps</h1>
 
                 <div class="row thumbnail-row">
-                    <div class="thumbnail shadow">
+                    <div class="col thumbnail shadow">
                         <div class="portfolio-img-bg">
                             <a href="projects/twitch" target="_blank"><img alt="Twitch API link" class="portfolio-img" src="images/thumbnail-twitch.jpg"></a>
                         </div>
                         <p class="figure-caption">Twitch API</p>
                     </div>
-                    <div class="thumbnail shadow">
+                    <div class="col thumbnail shadow">
                         <div class="portfolio-img-bg">
                             <a href="projects/wiki" target="_blank"><img alt="Wiki Viewer link" class="portfolio-img" src="images/thumbnail-wiki.jpg"></a>
                         </div>
                         <p class="figure-caption">Wiki Viewer</p>
                     </div>
-                    <div class="thumbnail shadow">
+                    <div class="col thumbnail shadow">
                         <div class="portfolio-img-bg">
                             <a href="projects/weather" target="_blank"><img alt="Weather App link" class="portfolio-img" src="images/thumbnail-weather.jpg"></a>
                         </div>
                         <p class="figure-caption">Weather App</p>
                     </div>
-                    <div class="thumbnail shadow">
+                    <div class="col thumbnail shadow">
                         <div class="portfolio-img-bg">
                             <a href="projects/quote" target="_blank"><img alt="Random Quote Generator link" class="portfolio-img" src="images/thumbnail-quote.jpg"></a>
                         </div>
@@ -238,13 +238,13 @@
                 <h1 class="projects-group">Games</h1>
 
                 <div class="row thumbnail-row">
-                    <div class="thumbnail shadow">
+                    <div class="col thumbnail shadow">
                         <div class="portfolio-img-bg">
                             <a href="projects/fps" target="_blank"><img alt="FPS link" class="portfolio-img" src="images/thumbnail-fps.jpg"></a>
                         </div>
                         <p class="figure-caption">Raycasting Demo</p>
                     </div>
-                    <div class="thumbnail shadow">
+                    <div class="col thumbnail shadow">
                         <div class="portfolio-img-bg">
                             <a href="https://www.oddrealms.com/" target="_blank"><img alt="OddRealms link" class="portfolio-img" src="images/thumbnail-or.jpg"></a>
                         </div>
@@ -255,14 +255,14 @@
                 <h1 class="projects-group">Other</h1>
 
                 <div class="row thumbnail-row">
-                    <div class="thumbnail shadow">
+                    <div class="col thumbnail shadow">
                         <div class="portfolio-img-bg">
                             <a href="https://github.com/Krashner/Projects" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-gh.jpg"></a>
                         </div>
                         <p class="figure-caption">GitHub Mega Project</p>
                     </div>
 
-                    <div class="thumbnail shadow">
+                    <div class="col thumbnail shadow">
                         <div class="portfolio-img-bg">
                             <a href="https://jimbuttreyperformance.com/" target="_blank"><img alt="Jim Buttrey Performace link" class="portfolio-img" src="images/thumbnail-jb.jpg"></a>
                         </div>
@@ -284,7 +284,7 @@
             <div class="col-12 section-col text-center">
                 <h1 class="skills-group">Web Design</h1>
                 <div class="row thumbnail-row">
-                    <div class="thumbnail shadow">
+                    <div class="col thumbnail shadow">
                         <div class="portfolio-img-bg">
                             <a href="images/fCCResponsiveWebDesignCert.png" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-fcc.png"></a>
                         </div>
