--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <div class="row thumbnail-row">
                     <div class="col thumbnail shadow">
                         <div class="portfolio-img-bg">
-                            <a href="images/fCCResponsiveWebDesignCert.png" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-fcc.png"></a>
+                            <a href="https://www.freecodecamp.org/certification/krashner/responsive-web-design" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-fcc.png"></a>
                         </div>
                         <p class="figure-caption">freeCodeCamp Responsive Web Design</p>
                     </div>
