--- a/index.html
+++ b/index.html
@@ -209,64 +209,79 @@
                 <h1 class="projects-group">Web Apps</h1>
 
                 <div class="row thumbnail-row">
-                    <div class="col thumbnail shadow">
-                        <div class="portfolio-img-bg">
-                            <a href="projects/twitch" target="_blank"><img alt="Twitch API link" class="portfolio-img" src="images/thumbnail-twitch.jpg"></a>
+                    <div class="col ">
+                        <div class="thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="projects/twitch" target="_blank"><img alt="Twitch API link" class="portfolio-img" src="images/thumbnail-twitch.jpg"></a>
+                            </div>
+                            <p class="figure-caption">Twitch API</p>
                         </div>
-                        <p class="figure-caption">Twitch API</p>
                     </div>
-                    <div class="col thumbnail shadow">
-                        <div class="portfolio-img-bg">
-                            <a href="projects/wiki" target="_blank"><img alt="Wiki Viewer link" class="portfolio-img" src="images/thumbnail-wiki.jpg"></a>
+                    <div class="col ">
+                        <div class="col thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="projects/wiki" target="_blank"><img alt="Wiki Viewer link" class="portfolio-img" src="images/thumbnail-wiki.jpg"></a>
+                            </div>
+                            <p class="figure-caption">Wiki Viewer</p>
                         </div>
-                        <p class="figure-caption">Wiki Viewer</p>
                     </div>
-                    <div class="col thumbnail shadow">
-                        <div class="portfolio-img-bg">
-                            <a href="projects/weather" target="_blank"><img alt="Weather App link" class="portfolio-img" src="images/thumbnail-weather.jpg"></a>
+                    <div class="col ">
+                        <div class=" thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="projects/weather" target="_blank"><img alt="Weather App link" class="portfolio-img" src="images/thumbnail-weather.jpg"></a>
+                            </div>
+                            <p class="figure-caption">Weather App</p>
                         </div>
-                        <p class="figure-caption">Weather App</p>
                     </div>
-                    <div class="col thumbnail shadow">
-                        <div class="portfolio-img-bg">
-                            <a href="projects/quote" target="_blank"><img alt="Random Quote Generator link" class="portfolio-img" src="images/thumbnail-quote.jpg"></a>
+                    <div class="col ">
+                        <div class="thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="projects/quote" target="_blank"><img alt="Random Quote Generator link" class="portfolio-img" src="images/thumbnail-quote.jpg"></a>
+                            </div>
+                            <p class="figure-caption">Random Quote Generator</p>
                         </div>
-                        <p class="figure-caption">Random Quote Generator</p>
                     </div>
                 </div>
 
                 <h1 class="projects-group">Games</h1>
 
                 <div class="row thumbnail-row">
-                    <div class="col thumbnail shadow">
-                        <div class="portfolio-img-bg">
-                            <a href="projects/fps" target="_blank"><img alt="FPS link" class="portfolio-img" src="images/thumbnail-fps.jpg"></a>
+                    <div class="col ">
+                        <div class="thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="projects/fps" target="_blank"><img alt="FPS link" class="portfolio-img" src="images/thumbnail-fps.jpg"></a>
+                            </div>
+                            <p class="figure-caption">Raycasting Demo</p>
                         </div>
-                        <p class="figure-caption">Raycasting Demo</p>
                     </div>
-                    <div class="col thumbnail shadow">
-                        <div class="portfolio-img-bg">
-                            <a href="https://www.oddrealms.com/" target="_blank"><img alt="OddRealms link" class="portfolio-img" src="images/thumbnail-or.jpg"></a>
+                    <div class="col ">
+                        <div class="thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="https://www.oddrealms.com/" target="_blank"><img alt="OddRealms link" class="portfolio-img" src="images/thumbnail-or.jpg"></a>
+                            </div>
+                            <p class="figure-caption">Open world game project</p>
                         </div>
-                        <p class="figure-caption">Open world game project</p>
                     </div>
                 </div>
 
                 <h1 class="projects-group">Other</h1>
 
                 <div class="row thumbnail-row">
-                    <div class="col thumbnail shadow">
-                        <div class="portfolio-img-bg">
-                            <a href="https://github.com/Krashner/Projects" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-gh.jpg"></a>
+                    <div class="col ">
+                        <div class="thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="https://github.com/Krashner/Projects" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-gh.jpg"></a>
+                            </div>
+                            <p class="figure-caption">GitHub Mega Project</p>
                         </div>
-                        <p class="figure-caption">GitHub Mega Project</p>
                     </div>
-
-                    <div class="col thumbnail shadow">
-                        <div class="portfolio-img-bg">
-                            <a href="https://jimbuttreyperformance.com/" target="_blank"><img alt="Jim Buttrey Performace link" class="portfolio-img" src="images/thumbnail-jb.jpg"></a>
+                    <div class="col ">
+                        <div class="thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="https://jimbuttreyperformance.com/" target="_blank"><img alt="Jim Buttrey Performace link" class="portfolio-img" src="images/thumbnail-jb.jpg"></a>
+                            </div>
+                            <p class="figure-caption">Performace Engines Business Site</p>
                         </div>
-                        <p class="figure-caption">Performace Engines Business Site</p>
                     </div>
                 </div>
 
@@ -284,11 +299,13 @@
             <div class="col-12 section-col text-center">
                 <h1 class="skills-group">Web Design</h1>
                 <div class="row thumbnail-row">
-                    <div class="col thumbnail shadow">
-                        <div class="portfolio-img-bg">
-                            <a href="https://www.freecodecamp.org/certification/krashner/responsive-web-design" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-fcc.png"></a>
+                    <div class="col ">
+                        <div class=" thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="https://www.freecodecamp.org/certification/krashner/responsive-web-design" target="_blank"><img alt="GitHub link" class="portfolio-img" src="images/thumbnail-fcc.png"></a>
+                            </div>
+                            <p class="figure-caption">freeCodeCamp Responsive Web Design</p>
                         </div>
-                        <p class="figure-caption">freeCodeCamp Responsive Web Design</p>
                     </div>
                 </div>
             </div>
