--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="row">
                             <div class="col-12 text-left">
                                 <h1 class="text-center" id="about-h1">Justin Buttrey</h1>
-                                <p id="about-p">Front end developer, electronics technician and full-time student. I'm currently working through the FreeCodeCamp courses and I have experience with C#, Javascript, SQL, HTML and CSS.</p>
+                                <p id="about-p">Front end developer, electronics technician and full-time student. I have an Associate's degree in computer science and I'm currently working on a Bachelor's degree. I have experience with C#, C++, Java, Javascript, Python, SQL, HTML and CSS.</p>
                             </div>
                         </div>
                     </div>
