--- a/index.html
+++ b/index.html
@@ -218,6 +218,14 @@
                         </div>
                     </div>
 					<div class="col ">
+                        <div class="col thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="https://github.com/Krashner/AutoReplyBot" target="_blank"><img alt="Reply bot link" class="portfolio-img" src="images/thumbnail-replybot.png"></a>
+                            </div>
+                            <p class="figure-caption">Reddit Auto Reply Bot</p>
+                        </div>
+                    </div>
+					<div class="col ">
                         <div class="thumbnail shadow">
                             <div class="portfolio-img-bg">
                                 <a href="https://github.com/Krashner/DMXConsole" target="_blank"><img alt="DMX Console link" class="portfolio-img" src="images/thumbnail-dmxconsole.png"></a>
@@ -233,17 +241,17 @@
 					<div class="col ">
                         <div class="col thumbnail shadow">
                             <div class="portfolio-img-bg">
-                                <a href="https://capchat.app/" target="_blank"><img alt="Cap Chat link" class="portfolio-img" src="images/thumbnail-capchat.png"></a>
+                                <a href="https://nodegrapher.com/" target="_blank"><img alt="NodeGrapher link" class="portfolio-img" src="images/thumbnail-nodegrapher.png"></a>
                             </div>
-                            <p class="figure-caption">Civil Air Patrol Chat App</p>
+                            <p class="figure-caption">NodeGrapher App</p>
                         </div>
                     </div>
 					<div class="col ">
                         <div class="col thumbnail shadow">
                             <div class="portfolio-img-bg">
-                                <a href="https://github.com/Krashner/AutoReplyBot" target="_blank"><img alt="Reply bot link" class="portfolio-img" src="images/thumbnail-replybot.png"></a>
+                                <a href="https://capchat.app/" target="_blank"><img alt="Cap Chat link" class="portfolio-img" src="images/thumbnail-capchat.png"></a>
                             </div>
-                            <p class="figure-caption">Reddit Auto Reply Bot</p>
+                            <p class="figure-caption">Civil Air Patrol Chat App</p>
                         </div>
                     </div>
                     <div class="col ">
@@ -318,6 +326,14 @@
                 <h1 class="projects-group">Other</h1>
 
                 <div class="row thumbnail-row">
+					<div class="col ">
+                        <div class="thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="https://jamieforzone7.com/" target="_blank"><img alt="Jamie For Zone 7 link" class="portfolio-img" src="images/thumbnail-jamie.png"></a>
+                            </div>
+                            <p class="figure-caption">Jamie For Zone 7 School Board Site</p>
+                        </div>
+                    </div>
                     <div class="col ">
                         <div class="thumbnail shadow">
                             <div class="portfolio-img-bg">
