--- a/index.html
+++ b/index.html
@@ -300,6 +300,15 @@
                             <p class="figure-caption">MekHQ</p>
                         </div>
                     </div>
+
+                    <div class="col ">
+                        <div class="thumbnail shadow">
+                            <div class="portfolio-img-bg">
+                                <a href="https://github.com/Krashner/megamek" target="_blank"><img alt="MegaMek link" class="portfolio-img" src="images/thumbnail-megamek.png"></a>
+                            </div>
+                            <p class="figure-caption">MegaMek</p>
+                        </div>
+                    </div>
                 </div>
 				
                 <h1 class="projects-group">Games</h1>
